# BloodBridge-AI

./: .gitignore  README.md  donors.json  evaluate_donor_recommendations.py  main.py  patients.json  pyproject.toml
app/: app.py
app/ai/: coordinator.py  eligibility.py  graph.py  matching.py  notification.py  ranking.py  registration.py  router.py
app/database/: database.py  import_data.py  init_db.py  models.py
app/evaluation/: __init__.py  donor_recommender_evaluator.py
app/knowledge/: blood_donation_guidelines.md
app/rag/: init_vector_store.py  retriever.py  vector_store.py
app/services/: chat_service.py  donor_service.py  registration_service.py
