[project]
name = "code-red"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "annotated-doc>=0.0.4",
    "annotated-types>=0.7.0",
    "anyio>=4.14.1",
    "audioop-lts>=0.2.2",
    "brotli>=1.2.0",
    "certifi>=2026.6.17",
    "charset-normalizer>=3.4.7",
    "click>=8.4.2",
    "distro>=1.9.0",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.139.0",
    "filelock>=3.29.4",
    "fsspec>=2026.6.0",
    "gradio>=6.19.0",
    "gradio-client>=2.5.0",
    "groovy>=0.1.2",
    "h11>=0.16.0",
    "hf-gradio>=0.4.1",
    "hf-xet>=1.5.1",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "huggingface-hub>=1.21.0",
    "idna>=3.18",
    "jinja2>=3.1.6",
    "jiter>=0.16.0",
    "joblib>=1.5.3",
    "jsonpatch>=1.33",
    "jsonpointer>=3.1.1",
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-huggingface>=1.2.0",
    "langchain-protocol>=0.0.18",
    "langgraph>=1.2.7",
    "langgraph-checkpoint>=4.1.1",
    "langgraph-prebuilt>=1.1.0",
    "langgraph-sdk>=0.4.2",
    "langsmith>=0.9.5",
    "markdown-it-py>=4.2.0",
    "markupsafe>=3.0.3",
    "mdurl>=0.1.2",
    "mpmath>=1.3.0",
    "narwhals>=2.23.0",
    "networkx>=3.6.1",
    "numpy>=2.5.0",
    "openai>=2.44.0",
    "orjson>=3.11.9",
    "ormsgpack>=1.12.2",
    "packaging>=26.2",
    "pandas>=3.0.3",
    "pillow>=12.3.0",
    "pydantic>=2.13.4",
    "pydantic-core>=2.46.4",
    "pydub>=0.25.1",
    "pygments>=2.20.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "pytz>=2026.2",
    "pyyaml>=6.0.3",
    "regex>=2026.6.28",
    "requests>=2.34.2",
    "requests-toolbelt>=1.0.0",
    "rich>=15.0.0",
    "safehttpx>=0.1.7",
    "safetensors>=0.8.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "semantic-version>=2.10.0",
    "sentence-transformers>=5.6.0",
    "setuptools>=82.0.1",
    "shellingham>=1.5.4",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "sqlalchemy>=2.0.51",
    "starlette>=1.3.1",
    "sympy>=1.14.0",
    "tenacity>=9.1.4",
    "threadpoolctl>=3.6.0",
    "tokenizers>=0.22.2",
    "tomlkit>=0.14.0",
    "torch>=2.10.0",
    "tqdm>=4.68.3",
    "transformers>=5.12.1",
    "typer>=0.25.1",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.2",
    "urllib3>=2.7.0",
    "uuid-utils>=0.16.2",
    "uvicorn>=0.49.0",
    "websockets>=15.0.1",
    "xxhash>=3.8.0",
    "zstandard>=0.25.0",
]
